# Inter-Component-Communication

./: .gitignore  .gitmodules  CMakeLists.txt  InterfaceForinterface.hpp  LICENSE  README.md  conanfile.py  icc_envoriment.cmake  main.cpp
conan-profiles/: vs_dynamic_debug  vs_dynamic_release  vs_static_debug  vs_static_release
examples/CommandLoop/: CMakeLists.txt  main.cpp
examples/CommonAPI_Client/: CMakeLists.txt  HelloWorldProxyClient.cpp  HelloWorldProxyClient.hpp  main.cpp
examples/CommonAPI_Client/interfaces/: HelloWorld.fidl
examples/CommonAPI_Server/: CMakeLists.txt  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp  main.cpp
examples/CommonAPI_Server/interfaces/: HelloWorld.fidl
examples/Coroutine/: CMakeLists.txt  main.cpp
examples/ForeCast/: CMakeLists.txt  Forecast.hpp  main.cpp
examples/OS/Posix/: CMakeLists.txt  main.cpp
examples/OS/Posix/client_socket/: main.cpp
examples/OS/Posix/server_socket/: main.cpp
examples/OS/Posix/timer/: CMakeLists.txt
examples/OS/client_socket/: CMakeLists.txt
examples/OS/server_socket/: CMakeLists.txt
examples/OS/timer/: CMakeLists.txt  main.cpp
examples/Sockets/: main.cpp
examples/ThreadPool/: CMakeLists.txt  main.cpp
examples/Timer/: CMakeLists.txt  main.cpp
examples/_Private/Optional/: CMakeLists.txt
samples/CommandLoop/: CMakeLists.txt  main.cpp
samples/CommonAPI_Client/: CMakeLists.txt
samples/CommonAPI_Server/: CMakeLists.txt
samples/ForeCast/: CMakeLists.txt  main.cpp
samples/OS/Posix/client_socket/: CMakeLists.txt
samples/OS/Posix/server_socket/: CMakeLists.txt
samples/OS/Posix/timer/: main.cpp
samples/Sockets/: CMakeLists.txt
samples/ThreadPool/: CMakeLists.txt  main.cpp
samples/_Private/Optional/: CMakeLists.txt  main.cpp
src/: Attribute.hpp  Component.hpp  Event.hpp  EventLoopProvider.hpp  IComponent.hpp  ITimerLisener.hpp  ITimerListener.hpp  Timer.hpp  TimerLisener.hpp
src/command/: Builder.hpp  Command.hpp  CommandData.h  CommandLoop.cpp  CommandLoop.hpp  ICommand.hpp  ICommandData.hpp  ICommandHandler.hpp  ICommandLisener.hpp  ICommandLoop.hpp  LoopMode.hpp  State.hpp
src/command/exception/: CommandNotFound.hpp  CommandStateAssert.hpp
src/command/exceptions/: CommandNotFound.hpp  CommandStateAssert.hpp
src/commonapi/: CommonAPIClient.hpp  CommonAPIService.hpp  fidl_generator.cmake  fidl_sources.cmake  interface_hierarchical_path.py  wrapper_generator.cmake
src/commonapi/cmake-config/: wrapper_generator.cmake
src/commonapi/exceptions/: CommonAPIClientError.hpp
src/commonapi/scripts/: interface_hierarchical_path.py
src/commonapi/templates/: CommonAPIClient.hpp.jinja2  CommonAPIClientLogged.hpp.jinja2  CommonAPIService.hpp.jinja2  CommonAPIServiceLogged.hpp.jinja2
src/coroutine/: Task.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Timer.hpp
src/exceptions/: ICCException.hpp
src/helpers/: concept_base_of_template.hpp  hash_helpers.hpp  memory_helper.hpp  memory_helpers.hpp
src/icc/: Component.hpp  Context.hpp  Event.hpp  EventLoop.hpp  IChannel.hpp  IComponent.hpp  ITimer.hpp  ITimerListener.hpp  Timer.hpp
src/icc/_private/: api.hpp
src/icc/_private/containers/: Optional.hpp  ThreadSafeQueue.hpp
src/icc/_private/containers/exceptions/: ContainerError.hpp
src/icc/_private/dynamic_lib/: api_trigger.hpp
src/icc/_private/helpers/: function_wrapper.hpp  hash_helpers.hpp  memory_helpers.hpp  thread_safe_queue.hpp
src/icc/_private/static_lib/: api_trigger.hpp
src/icc/command/: Builder.hpp  CommandLoop.cpp  CommandLoop.hpp  ICommand.hpp  ICommandLoop.hpp
src/icc/command/exceptions/: CommandNotFound.hpp  CommandStateAssert.hpp
src/icc/commonapi/: CommonAPIClient.hpp  CommonAPIService.hpp
src/icc/commonapi/cmake-config/: fidl_sources.cmake  wrapper_generator.cmake
src/icc/commonapi/exceptions/: CommonAPIClientError.hpp
src/icc/commonapi/scripts/: interface_hierarchical_path.py
src/icc/commonapi/templates/: CommonAPIClient.hpp.jinja2  CommonAPIClientLogged.hpp.jinja2  CommonAPIService.hpp.jinja2  CommonAPIServiceLogged.hpp.jinja2
src/icc/coroutine/: Task.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Timer.hpp
src/icc/interprocess/commonapi/: CommonAPIClient.hpp
src/icc/interprocess/commonapi/cmake-config/: fidl_sources.cmake  wrapper_generator.cmake
src/icc/interprocess/commonapi/exceptions/: CommonAPIClientError.hpp
src/icc/interprocess/commonapi/scripts/: interface_hierarchical_path.py
src/icc/localbus/: IClient.hpp  IService.hpp  LocalBus.cpp  LocalBus.hpp  ProcessBus.cpp  ProcessBus.hpp
src/icc/logger/: DummyLogger.hpp
src/icc/os/: EventLoop.cpp  EventLoop.hpp  IEventLoop.hpp  OSEventLoop.hpp  SharedMemory.hpp  Socket.hpp  Timer.hpp
src/icc/os/exceptions/: OSError.hpp
src/icc/os/networking/: IServerSocket.hpp  IServerSocketListener.hpp  ISocket.hpp  ISocketListener.hpp  ISocketReceiver.hpp  ISocketSender.hpp  ServerSocket.hpp  Socket.hpp  SocketTypes.hpp
src/icc/os/posix/: Context.cpp  EventLoop.cpp  EventLoop.hpp  EventLoopImpl.cpp  EventLoopImpl.hpp  OSObject.hpp  Pipe.cpp  Pipe.hpp  SharedMemory.cpp  SharedMemory.hpp  Socket.cpp  Socket.hpp  Timer.cpp  Timer.hpp  TimerImpl.cpp  TimerImpl.hpp
src/icc/os/timer/: ITimerListener.hpp  Timer.cpp  Timer.hpp
src/icc/threadpool/: JThread.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp
src/icc/threadpool/exceptions/: TaskInvalid.hpp  TaskStateAssert.hpp
src/icc/timer/: ITimer.hpp
src/localbus/: IClient.hpp  IService.hpp  ProcessBus.hpp
src/logger/: DummyLogger.hpp
src/service/: IClient.hpp  IService.hpp  ProcessBus.cpp  ProcessBus.hpp
src/service/templates/: ICCClientLogged.hpp.jinja2  ICCServiceLogged.hpp.jinja2  LocalService.hpp.jinja2
src/threadpool/: Task.hpp  ThreadPool.cpp  ThreadPool.hpp
src/threadpool/exceptions/: TaskInvalid.hpp  TaskStateAssert.hpp
test/: CMakeLists.txt  main.cpp
test/icc/_private/helpers/: ThreadSafeQueueTests.cpp  thread_safe_queue_tests.cpp
test/icc/os/posix/: TimerTests.cpp
test/icc/threadpool/: ThreadPoolTests.cpp
test_package/: CMakeLists.txt  conanfile.py  conanfile.txt  example.cpp
(+2 files in other folders)
